Auth tokens creation and reset

--- a/Media.Presentation/appsettings.Development.json
+++ b/Media.Presentation/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=MediaApi;User Id=root;"
+    "DefaultConnection": "Server=localhost;Database=MediaApi;User Id=root"
   }
 }
