--- a/Media.Presentation/appsettings.json
+++ b/Media.Presentation/appsettings.json
@@ -6,5 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "DefaultConnection": "Server=localhost;Database=MediaApi;User Id=root;Password=DeepSp@ce9"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=77.163.93.4;Database=MediaApi;User Id=root;Password=DeepSp@ce9"
+  }
 }
