--- a/Media.Abstractions/Media.Abstractions.csproj
+++ b/Media.Abstractions/Media.Abstractions.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Media.Core\Media.Core.csproj" />
+  </ItemGroup>
+
 </Project>
