--- a/Media.Infrastructure/Media.Infrastructure.csproj
+++ b/Media.Infrastructure/Media.Infrastructure.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+	  <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="1.1.1" />
+	  <PackageReference Include="Swashbuckle.AspNetCore" Version="8.0.0" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Media.Abstractions\Media.Abstractions.csproj" />
     <ProjectReference Include="..\Media.Core\Media.Core.csproj" />
     <ProjectReference Include="..\Media.Persistence\Media.Persistence.csproj" />
