--- a/Media.Presentation/Properties/launchSettings.json
+++ b/Media.Presentation/Properties/launchSettings.json
@@ -6,10 +6,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7103;http://localhost:5258",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      "applicationUrl": "https://localhost:7103;http://localhost:5258"
     }
   }
 }
