Get media by token

--- a/Media.Presentation/appsettings.json
+++ b/Media.Presentation/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=77.163.93.4;Database=MediaApi;User Id=root;Password=DeepSp@ce9"
-  }
+  },
+  "Environment": "Production"
 }
