--- a/Media.Presentation/Properties/launchSettings.json
+++ b/Media.Presentation/Properties/launchSettings.json
@@ -6,7 +6,10 @@
       "dotnetRunMessages": true,
       "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7103;http://localhost:5258"
+      "applicationUrl": "https://localhost:7103;http://localhost:5258",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     }
   }
 }
