--- a/Media.Presentation/appsettings.Development.json
+++ b/Media.Presentation/appsettings.Development.json
@@ -7,5 +7,9 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=MediaApi;User Id=root"
+  },
+  "RateLimiting": {
+    "RequestsPerWindow": 10000,
+    "WindowSeconds": 60
   }
 }
