--- a/Media.Presentation/appsettings.json
+++ b/Media.Presentation/appsettings.json
@@ -9,5 +9,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=77.163.93.4;Database=MediaApi;User Id=root;Password=DeepSp@ce9"
   },
-  "Environment": "Production"
+  "RateLimiting": {
+    "RequestsPerWindow": 50,
+    "WindowSeconds": 60
+  }
+
 }
