Change database provider from MySQL to MS Sql server

--- a/Media.Presentation/appsettings.Development.json
+++ b/Media.Presentation/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=MediaApi;User Id=root"
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=MediaAPI;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "RateLimiting": {
     "RequestsPerWindow": 10000,
