--- a/Media.Presentation/appsettings.Development.json
+++ b/Media.Presentation/appsettings.Development.json
@@ -11,5 +11,17 @@
   "RateLimiting": {
     "RequestsPerWindow": 10000,
     "WindowSeconds": 60
+  },
+  "UploadPolicy": {
+    "MaxFileSize": 52428800,
+    "BlockedFileExtensions": [
+      ".exe",
+      ".dll",
+      ".bat",
+      ".cmd",
+      ".ps1",
+      ".msi",
+      ".jar"
+    ]
   }
 }
