--- a/Media.Presentation/appsettings.json
+++ b/Media.Presentation/appsettings.json
@@ -12,6 +12,18 @@
   "RateLimiting": {
     "RequestsPerWindow": 50,
     "WindowSeconds": 60
+  },
+  "UploadPolicy": {
+    "MaxFileSize": 52428800,
+    "BlockedFileExtensions": [
+      ".exe",
+      ".dll",
+      ".bat",
+      ".cmd",
+      ".ps1",
+      ".msi",
+      ".jar"
+    ]
   }
 
 }
