--- a/Media.Test.Core/Media.Test.Core.csproj
+++ b/Media.Test.Core/Media.Test.Core.csproj
@@ -1,19 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-
-    <IsPackable>false</IsPackable>
-    <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="coverlet.collector" Version="6.0.0" />
-	<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
-    <PackageReference Include="MSTest.TestAdapter" Version="3.1.1" />
     <PackageReference Include="MSTest.TestFramework" Version="3.1.1" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.22" />
   </ItemGroup>
 
   <ItemGroup>
@@ -22,11 +17,6 @@
     <ProjectReference Include="..\Media.Infrastructure\Media.Infrastructure.csproj" />
     <ProjectReference Include="..\Media.Persistence\Media.Persistence.csproj" />
     <ProjectReference Include="..\Media.Presentation\Media.Presentation.csproj" />
-    <ProjectReference Include="..\Media.Test.Core\Media.Test.Core.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
 
 </Project>
