Change back to MySQL for new hosting environment

--- a/Media.Presentation/appsettings.Development.json
+++ b/Media.Presentation/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=MediaAPI;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DefaultConnection": "Server=77.163.93.4;Database=MediaApi;User Id=admin;Password=DeepSp@ce9!"
   },
   "RateLimiting": {
     "RequestsPerWindow": 10000,
