--- a/Media.Presentation/appsettings.json
+++ b/Media.Presentation/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=77.163.93.4;Database=MediaApi;User Id=root;Password=DeepSp@ce9"
+    "DefaultConnection": "Server=77.163.93.4;Database=MediaApi;User Id=admin;Password=DeepSp@ce9!"
   },
   "RateLimiting": {
     "RequestsPerWindow": 50,
